# Practice.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Practice.cpp.sln  README.md  build_windows.bat
Assets/: test_simple_proto.json
Assets/lua/: math_3d.lua  test_capi_call_lua.lua  test_capi_closure.lua  test_lua_ext_lib.lua  test_lua_string_patterns.lua  test_my_extension.lua  test_unlua.lua  ui_helper.lua
Books/C++ templates complete guide 2nd/: 1_max1.cpp  all_in_one.cpp
Documents/: Keep Moving.xlsx  Tricks.md  Tricks.txt  Why Not Specialize Function Templates.docx  全局变量初始化顺序及注意事项.txt
Examples/: README.md
Examples/CatchUnitTestExample/: CatchUnitTestExample.vcxproj  CatchUnitTestExample.vcxproj.filters  factorial.cpp  main.cpp  test_vector.cpp
Examples/CrashMT/: CrashMT.vcxproj  CrashMT.vcxproj.filters  main.cpp
Examples/ExternC/: test1.cpp  test2.cpp
Examples/Float/: Float.vcxproj  main.cpp
Examples/Function/: Function.vcxproj  main.cpp
Examples/GlobalInitOrder/: GlobalInitOrder.vcxproj  main.cpp
Examples/Kapok/kapok/: JsonUtil.hpp
Examples/Kapok/vcproject/vcproject/: vcproject.vcxproj  vcproject.vcxproj.filters
Examples/Reflection/: Main.cpp  Primitives.cpp  Reflection.vcxproj
Examples/Serialization/: Serialization.vcxproj  Serialization.vcxproj.filters  experiment.cpp  main.cpp  serialization.h
Examples/Socket/: Socket.vcxproj  Socket.vcxproj.filters  main.cpp  mini_tcp_client.cpp  mini_tcp_client.h  mini_tcp_server.cpp  mini_tcp_server.h
Examples/Test/: main.cpp  test_04737.cpp  test_MakeSureDirectoryPathExists.cpp  test_any.cpp  test_asm.cpp  test_base64.cpp  test_catch2.cpp  test_float.cpp  test_functional.cpp  test_macro.cpp  test_misc.cpp  test_netstat.cpp  test_new.cpp  test_nullptr.cpp  test_os_windows.cpp  test_priority_queue.cpp  test_rapidjson.cpp  test_rvalue.cpp  test_sqlite.cpp  test_sstream.cpp  test_string.cpp  test_stringstream.cpp  test_template.cpp  test_thread.cpp  test_time.cpp  test_tuple.cpp  test_type_traits.cpp  test_typeid.cpp  test_uncommon.cpp  test_variant.cpp  test_win_api.cpp  var_list.h
Examples/TestBoost/: TestBoost.vcxproj  main.cpp
Examples/TestTypeTraits/: TestTypeTraits.vcxproj  main.cpp
Examples/TestVTune/: main.cpp
Examples/Tmp/: i_object_input_stream.h  main.cpp  my_var_list.h  object_input_stream.h  object_output_stream.h  test___COUNTER__.cpp  test_bitset.cpp  test_const.cpp  test_constexpr.cpp  test_decltype.cpp  test_forward_list.cpp  test_macro.cpp  test_mod.cpp  test_optional.cpp  test_rapidxml.cpp  test_smart_ptr.cpp  test_thread.cpp  test_typeid.cpp  test_variant.cpp
Examples/VariadicTemplate/: VariadicTemplate.vcxproj  main.cpp
Examples/libMT/: dll_main.cpp  i_lib_mt.h  libMT.vcxproj
Examples/libevent/: libevent.vcxproj  libevent.vcxproj.filters
Examples/priority_queue/: main.cpp  priority_queue.vcxproj
Examples/tuple/: main.cpp  tuple.vcxproj
Primer/Templates/: Templates.cpp  Templates.vcxproj  Templates.vcxproj.filters
Primer/Variadic/: Variadic.cpp  Variadic.vcxproj  Variadic.vcxproj.filters
Primer/errMsg_initList/: errMsg_initList.vcxproj
Source/: CMakeLists.txt
Source/ExternC/: main.cpp
Source/Serialization/: main.cpp
Source/Test/: CMakeLists.txt  test_cpp_templates_complete_guide_2nd.cpp  test_decltype.cpp  test_file.cpp  test_float.cpp  test_hello_world.cpp  test_initializer_list.cpp  test_lib_event.cpp  test_lua_capi.cpp  test_lua_ext_lib.cpp  test_lunasvg.cpp  test_mod.cpp  test_rapidxml.cpp  test_simple_proto.cpp  test_skiplist.cpp  test_sqlite.cpp  test_sstream.cpp  test_stl_algo.cpp  test_string_encode.cpp  test_thread.cpp  test_time_wheel.cpp  test_var_list.cpp  test_variant.cpp  test_vtune.cpp
Templates/: Templates.cpp
Templates/AppendixB/: AppendixB.vcxproj  AppendixB.vcxproj.filters  main.cpp
Templates/FunctionTemplates/: FunctionTemplates.cpp  FunctionTemplates.vcxproj  FunctionTemplates.vcxproj.filters
Templates/TraitAndPolicy/: TraitAndPolicy.vcxproj  TraitAndPolicy.vcxproj.filters  accum0.hpp  accum1.hpp  accum5.hpp  accum6.hpp  accumtraits3.hpp  apply1.hpp  elementtype.hpp  ifthenelse.hpp  isclasst.hpp  main.cpp  sizeof.hpp  sumpolicy2.hpp
Templates/TrickyBasics/: TrickyBasics.vcxproj  TrickyBasics.vcxproj.filters  main.cpp  stack.h
Test/: Test.vcxproj  Test.vcxproj.filters  i_object_output_stream.h  main.cpp  my_var_list_traits.h  reflection.h  test_constexpr.cpp  test_constexpr.h  test_decltype.h  test_macro.cpp
TestVTune/: TestVTune.vcxproj  main.cpp
assets/lua/: point_in_tri.lua  test.lua  test_capi_global_c_lua.lua  test_capi_pcall_err.lua  test_capi_pcall_ok.lua  test_lua_base.lua
errMsg_initList/: errMsg_initList.cpp  errMsg_initList.vcxproj  errMsg_initList.vcxproj.filters
source/: CMakeLists.txt
source/game/: CMakeLists.txt  fight_system.cpp
source/gui/: CMakeLists.txt  hello_wtl.cpp
source/socket/: mini_tcp_server.cpp  mini_tcp_server.h
source/test/: CMakeLists.txt  astar_find_path.h  ring_buffer.h  test_asm.cpp  test_base64.cpp  test_constexpr.cpp  test_dtor.cpp  test_filesystem.cpp  test_forward_list.cpp  test_kcp.cpp  test_lua_capi.cpp  test_lua_ext_lib.cpp  test_lunasvg.cpp  test_misc.cpp  test_monte_carlo.cpp  test_openssl.cpp  test_printf_format.cpp  test_priority_queue.cpp  test_rapidjson.cpp  test_rapidxml.cpp  test_ratas.cpp  test_ring_buffer.cpp  test_simple_proto.cpp  test_skiplist.cpp  test_smart_ptr.cpp  test_sqlite.cpp  test_stdarg.cpp  test_stl_algo.cpp  test_string_encode.cpp  test_tagged_pointer.cpp  test_template.cpp  test_thread.cpp  test_time_wheel.cpp  test_typeid.cpp  test_udp_socket.cpp  test_var_list.cpp  test_vtune.cpp  test_win_api.cpp  test_win_iocp.cpp
